added crest descriptions

--- a/src/StudentProfile.css
+++ b/src/StudentProfile.css
@@ -1,3 +1,9 @@
 .name {
   color: black;
 }
+.crest-effect {
+  visibility: hidden;
+  background-color: aquamarine;
+  z-index: top;
+  width: 20em;
+}
